# infero

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  conda_req.yml  env.sh  install.sh  scripts_env.sh
.github/workflows/: ci.yml
cmake/: FindFCKIT.cmake  FindONNX.cmake  FindTensorRT.cmake  FindTensorflowC.cmake  FindTensorflowLite.cmake  compiler_warnings.cmake  final-support.F90  final-support.cmake
contrib/: CMakeLists.txt
contrib/DBSCAN/: CMakeLists.txt
contrib/cnpy/: CMakeLists.txt
dev/: 1_install_deps.sh  2_install_infero.sh  3_run_tests.sh  4_cleanup.sh  env.sh  onnx2trt_example.sh
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/User_Guide/: build_and_install.rst  examples.rst  getting_started.rst  quick_start.rst  usage_examples.rst
docs/_static/: style.css
examples/: 1_example_mimo_c.c  2_example_mimo_cpp.cc  3_example_mimo_fortran.F90  4_example_mimo_thread.cc  CMakeLists.txt
scripts/: conda_req.yml  convert_csv2npy.py  convert_keras2onnx.py  convert_keras2tf.py  convert_keras2tflite.py  convert_tf2trt.py  keras2tflite.py  load_data.py  mimo_model.py  read_datafile.py  scripts_env.sh  summarise_tfmodel.py  verify_prediction.py
src/: CMakeLists.txt  infero.cpp  infero_version.cc  infero_version.h.in  prediction.cpp  prediction.h
src/clustering/: CMakeLists.txt  Clustering.cc  Clustering.h  ClusteringDBscan.cc  ClusteringDBscan.h  clustering.cpp  clustering.h  clustering_dbscan.cpp  clustering_dbscan.h
src/infero/: CMakeLists.txt  Configurable.cc  Configurable.h  InferoBuffer.cc  InferoBuffer.h  MLTensor.cc  MLTensor.h  Prediction.cc  Prediction.h  Tensor.cc  Tensor.h  infero.cc  infero.cpp  infero_par.cc  infero_utils.h  onnx2trt.cpp  prediction.cpp  prediction.h  utils.h
src/infero/api/: CMakeLists.txt  infero-api.cc  infero.h  inferof.F90  runner.c  runner_oro_drag.F90  runnerf.F90
src/infero/api/examples/: CMakeLists.txt  runner.c  runner_mimo.F90  runner_mimo.c  runner_oro_drag.F90  runner_oro_drag_file.F90  runner_tcyclone.F90  runner_tcyclone.c
src/infero/api/pyinfero/: pyinfero-headers.h  setup.py
src/infero/api/pyinfero/pyinfero/: __init__.py  pyinfero-headers.h  pyinfero.py  test_pyinfero.py
src/infero/api/pyinfero/tests/: test_config.py  test_cyclone.py  test_mimo.py
src/infero/clustering/: CMakeLists.txt  Clustering.cc  Clustering.h  ClusteringDBscan.cc  ClusteringDBscan.h  cluster.cc  clustering.cpp  clustering.h  clustering_dbscan.cpp  clustering_dbscan.h
src/infero/inference_models/: CMakeLists.txt  InferenceModel.cc  InferenceModel.h  InferenceModelONNX.cc  InferenceModelONNX.h  InferenceModelTFlite.cc  InferenceModelTFlite.h  InferenceModelTRT.cc  InferenceModelTRT.h
src/infero/input_types/: InputData.cc  InputData.h  input_data.cpp  input_data.h
src/infero/ml_engines/: CMakeLists.txt  MLEngine.cc  MLEngine.h  MLEngineONNX.cc  MLEngineONNX.h  MLEngineTFlite.cc  MLEngineTFlite.h  MLEngineTRT.cc  MLEngineTRT.h  engine.cpp  engine.h  engine_onnx.cpp  engine_onnx.h  engine_tflite.cpp  engine_tflite.h  engine_trt.cpp  engine_trt.h
src/infero/models/: CMakeLists.txt  InferenceModel.cc  InferenceModel.h  InferenceModelONNX.cc  InferenceModelONNX.h  InferenceModelTFC.cc  InferenceModelTFC.h  InferenceModelTFlite.cc  InferenceModelTFlite.h  InferenceModelTRT.cc  InferenceModelTRT.h  ModelStatistics.cc  ModelStatistics.h
src/input_types/: input_data.cpp  input_data.h
src/ml_engines/: engine.cpp  engine.h  engine_onnx.cpp  engine_onnx.h  engine_tflite.cpp  engine_trt.cpp
tests/: CMakeLists.txt  test_inference_model.cc  test_mlengine.cc  test_mltensor.cc
tests/c_api/: CMakeLists.txt  test_inference_model.cc  test_infero_init.cc  test_model_tfc_c_api.cc.in  test_tensor_set.cc
tests/data/: m36966_input.csv  m36966_input.npy  m36966_prediction.csv  model.onnx  model.tflite  model_36966.h5  ref_pred.csv
tests/data/cyclone/: cyclone_input_200x200.npy  cyclone_model_200x200.h5  cyclone_model_200x200.onnx  cyclone_model_200x200.tflite  cyclone_model_200x200.trt  cyclone_model_640x1408.h5  cyclone_output_200x200.csv  cyclone_output_200x200.npy  cyclone_output_200x200_ctensor.csv  cyclone_output_200x200_ftensor.csv  run_cyclone_model.py
tests/data/cyclone/cyclone_model_200x200_tf/: saved_model.pb
tests/data/cyclone/cyclone_model_200x200_tf/variables/: variables.data-00000-of-00001  variables.index
tests/data/mimo_model/: mimo_model.onnx  mimo_model.tflite  mimo_model.trt
tests/data/mimo_model/mimo_model_tf/: saved_model.pb
tests/data/mimo_model/mimo_model_tf/variables/: variables.data-00000-of-00001  variables.index
tests/data/orographic_drag/: LICENSE  m36966_prediction_0.csv  model.trt  ref_pred.csv
tests/data/orographic_drag/model_tf/: saved_model.pb
tests/data/orographic_drag/model_tf/variables/: variables.data-00000-of-00001  variables.index
tests/f_api/: CMakeLists.txt  test_fapi_infero_model.F90  test_fapi_infero_model.F90.in  test_fapi_tensor_set.F90
tests/regressions/: CMakeLists.txt
tests/regressions/mimo_model/: CMakeLists.txt  mimo_onnx.sh.in  mimo_tf_c.sh.in  mimo_tflite.sh.in  mimo_trt.sh.in  runner_mimo.F90  runner_mimo.c  test_mimo_template.sh.in
tests/regressions/orographic_drag/: CMakeLists.txt  f90_oro_drag_onnx.sh.in  orographic_drag_onnx.sh.in  orographic_drag_tf_c.sh.in  orographic_drag_tflite.sh.in  orographic_drag_trt.sh.in  runner_oro_drag.F90  runner_oro_drag.c  test_oro_drag_template.sh.in
tests/regressions/tcyclone/: CMakeLists.txt  f90_tcyclone_onnx.sh.in  runner_tcyclone.F90  runner_tcyclone.c  tcyclone_onnx.sh.in  tcyclone_tf_c.sh.in  tcyclone_tflite.sh.in  tcyclone_tflite_c.sh.in  tcyclone_trt.sh.in  test_tcyclone_template.sh.in
tools/: infero-run
